--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <p id="seed_container">Seed: <span id="seed"> </span></p>
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
   <script src="random_seed.js"></script>
   <script src="springy.js"></script>
   <script src="springyui.js"></script>
