--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <input type="range" id="nb_node" value="5" min="2" max="20" oninput="this.nextElementSibling.value = this.value">
       <output>10</output><br><br>
       <label for="connectivity" class="label">Connectivité</label>
-      <input type="range" id="connectivity" value="1" min="0" max=".5" step=".01" name="connectivity"><br><br>
+      <input type="range" id="connectivity" value=".5" min="0" max="1" step=".01" name="connectivity"><br><br>
       <label for="seed_input" class="label">Seed</label>
       <input type="text" id="seed_input" name="seed_input"><br><br>
 
