Modified graph structure

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <canvas id="canvas" width="1000" height="1000"></canvas>
+  <canvas id="canvas" width="700" height="700"></canvas>
   <div id="form">
     <form action="">
       <label for="nb_node" class="label">Nombre de noeuds</label>
@@ -30,9 +30,11 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
   <script src="random_seed.js"></script>
-  <script src="springy.js"></script>
-  <script src="springyui.js"></script>
+  <!--<script src="springy.js"></script>-->
+  <!--<script src="springyui.js"></script>-->
   <script src="ant_colony.js"></script>
+  <!--<script src="graph_spring.js"></script>-->
+  <script src="graph_planar.js"></script>
   <script src="main.js"></script>
 </body>
 
