Reworked ant colony

--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
   <p id="seed_container">Seed: <span id="seed"> </span></p>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-  <script src="random_seed.js"></script>
+  <script src="utilities/random_seed.js"></script>
   <!--<script src="springy.js"></script>-->
   <!--<script src="springyui.js"></script>-->
+  <script src="ant.js"></script>
   <script src="ant_colony.js"></script>
   <!--<script src="graph_spring.js"></script>-->
   <script src="graph_planar.js"></script>
