--- a/index.html
+++ b/index.html
@@ -12,18 +12,33 @@
 
 <body>
   <canvas id="canvas" width="900" height="900"></canvas>
-  <div id="form">
-    <form action="">
-      <label for="nb_node" class="label">Nombre de noeuds</label>
-      <input type="range" id="nb_node" value="5" min="2" max="20" oninput="this.nextElementSibling.value = this.value">
-      <output>10</output><br><br>
-      <label for="connectivity" class="label">Connectivité</label>
-      <input type="range" id="connectivity" value=".5" min="0" max="1" step=".01" name="connectivity"><br><br>
-      <label for="seed_input" class="label">Seed</label>
-      <input type="text" id="seed_input" name="seed_input"><br><br>
 
-      <input type="submit" id="generate" value="Générer">
-    </form>
+  <div id="info">
+    <div id="form">
+      <form action="">
+        <label for="nb_node" class="label">Nombre de noeuds</label>
+        <input type="range" id="nb_node" value="5" min="2" max="20" oninput="this.nextElementSibling.value = this.value">
+        <output>10</output><br><br>
+        <label for="connectivity" class="label">Connectivité</label>
+        <input type="range" id="connectivity" value=".5" min="0" max="1" step=".01" name="connectivity"><br><br>
+        <label for="seed_input" class="label">Seed</label>
+        <input type="text" id="seed_input" name="seed_input"><br><br>
+        
+        <input type="submit" id="generate" value="Générer">
+      </form>
+    </div>
+    
+    <div id="data">
+      <div class="label">
+        Shortest Path: <span id="short_path">100</span>
+      </div>
+      <div class="label">
+        Pheromone Map:
+      </div>
+      <div id="grid">
+        <div class="square"></div>
+      </div>
+    </div>
   </div>
 
   <p id="seed_container">Seed: <span id="seed"> </span></p>
