correction des parametres

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         <label for="importance" class="label">Heuristique/Pheromone</label>
         <input type="range" id="importance" value=".5" min="0" max="1" step=".01" name="importance"><br><br>
         <label for="evaporation" class="label">Évaporation</label>
-        <input type="range" id="evaporation" value=".5" min="0" max="1" step=".01" name="evaporation"><br><br>
+        <input type="range" id="evaporation" value=".1" min="0.01" max="1" step=".01" name="evaporation"><br><br>
+        <label for="adding" class="label">Ajout phéromones</label>
+        <input type="range" id="adding" value="1.5" min="0.1" max="10" step=".01" name="evaporation"><br><br>
         <label for="seed_input" class="label">Seed</label>
         <input type="text" id="seed_input" name="seed_input"><br><br>
         
